# spl-token-staking

./: .gitignore  Anchor.toml  LICENSE  README.md  SECURITY.md  package.json  test.js  tsconfig.json
programs/single-sided-staking/: Cargo.toml
programs/single-sided-staking/src/: errors.rs  lib.rs  state.rs
programs/single-sided-staking/src/instructions/: add_reward_pool.rs  claim_all.rs  deposit.rs  initialize_stake_pool.rs  mod.rs  withdraw.rs
programs/spl-token-staking/: Cargo.toml
programs/spl-token-staking/src/: errors.rs  governance.rs  lib.rs  macros.rs  math.rs  security.rs  state.rs
programs/spl-token-staking/src/governance/: max_voter_weight.rs  mod.rs  tools.rs  voter_weight.rs
programs/spl-token-staking/src/instructions/: add_reward_pool.rs  claim_all.rs  claim_base.rs  create_registrar.rs  create_voter_weight_record.rs  dangerously_mint_stake_mint.rs  deposit.rs  initialize_stake_pool.rs  mod.rs  set_flags.rs  transfer_authority.rs  update_token_meta.rs  withdraw.rs
tests/: add-reward-pool.ts  claim-all.ts  create-registrar.ts  create-voter-weight-record.ts  dangerously-mint-stake-mint.ts  decimal-overflow.ts  deposit.ts  disable-deposits.ts  errors.ts  escape-hatch.ts  genericTests.ts  governance-e2e.ts  hooks.ts  initialize-stake-pool.ts  multiple-rewards.ts  transfer-authority.ts  updateTokenMeta.ts  utils.ts  withdraw.ts  zero-duration-pool.ts
tests/token-2022/: 00_initialize-stake-pool.ts  01_deposit.ts  03_claim-all.ts  04_withdraw.ts  hooks22.ts  initialize-stake-pool.ts
