[package]
name = "single-sided-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "single_sided_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
bytemuck = { version = "1.7", features = ["derive"] }
jet-proc-macros = { version = "1", package = "jet-proto-proc-macros" }
static_assertions = "1.1.0"