[package]
name = "spl-token-staking"
version = "1.1.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { version = "0.28.0", features = ["metadata"] }
bytemuck = { version = "1.7", features = ["derive"] }
jet-proc-macros = { version = "1", package = "jet-proto-proc-macros" }
static_assertions = "1.1.0"
uint = "=0.9.1"

mpl-token-metadata = { version = "=1.13.2" }

solana-security-txt = "1.1.1"
default-env = "0.1.1"
