[package]
name = "spl-token-staking"
version = "2.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token-2022 = "3.0.1"
borsh = "0.10.3"
bytemuck = { version = "1.7", features = ["derive"] }
jet-proc-macros = { version = "1", package = "jet-proto-proc-macros" }
static_assertions = "1.1.0"
spl-governance = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-governance-addin-api = "=0.1.4"
uint = "=0.9.1"

solana-program = "=1.18.2"